Restore Supabase media placeholders

--- a/public/media/manifest.json
+++ b/public/media/manifest.json
@@ -1,6 +1,6 @@
 {
-  "version": 2,
-  "updatedAt": "2025-10-21T16:30:00.000Z",
+  "version": 3,
+  "updatedAt": "2025-10-21T16:04:40.992Z",
   "items": [
     {
       "id": "supabase-ar-overlay-erix-panda-complete",
@@ -13,6 +13,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/AR Overlay/eRIX ESCAPE RIDE PANDA COMPLETE.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/ar-overlay.svg",
+      "url": "/media/placeholders/ar-overlay.svg",
+      "placeholder": {
+        "kind": "ar-overlay",
+        "label": "AR Overlay Placeholder",
+        "path": "public/media/placeholders/ar-overlay.svg",
+        "url": "/media/placeholders/ar-overlay.svg"
       }
     },
     {
@@ -26,6 +35,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/AR Overlay/Erix Escape ride overlay landscape.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/ar-overlay.svg",
+      "url": "/media/placeholders/ar-overlay.svg",
+      "placeholder": {
+        "kind": "ar-overlay",
+        "label": "AR Overlay Placeholder",
+        "path": "public/media/placeholders/ar-overlay.svg",
+        "url": "/media/placeholders/ar-overlay.svg"
       }
     },
     {
@@ -39,6 +57,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/AR Overlay/Erix Escape ride overlay landscapesmaller.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/ar-overlay.svg",
+      "url": "/media/placeholders/ar-overlay.svg",
+      "placeholder": {
+        "kind": "ar-overlay",
+        "label": "AR Overlay Placeholder",
+        "path": "public/media/placeholders/ar-overlay.svg",
+        "url": "/media/placeholders/ar-overlay.svg"
       }
     },
     {
@@ -52,6 +79,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/AR Overlay/erix square.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/ar-overlay.svg",
+      "url": "/media/placeholders/ar-overlay.svg",
+      "placeholder": {
+        "kind": "ar-overlay",
+        "label": "AR Overlay Placeholder",
+        "path": "public/media/placeholders/ar-overlay.svg",
+        "url": "/media/placeholders/ar-overlay.svg"
       }
     },
     {
@@ -65,6 +101,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/1759645884960-SMOKE_BOMB.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/image.svg",
+      "url": "/media/placeholders/image.svg",
+      "placeholder": {
+        "kind": "image",
+        "label": "Image Placeholder",
+        "path": "public/media/placeholders/image.svg",
+        "url": "/media/placeholders/image.svg"
       }
     },
     {
@@ -78,6 +123,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/1759645910730-SMOKE_BOMB.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/image.svg",
+      "url": "/media/placeholders/image.svg",
+      "placeholder": {
+        "kind": "image",
+        "label": "Image Placeholder",
+        "path": "public/media/placeholders/image.svg",
+        "url": "/media/placeholders/image.svg"
       }
     },
     {
@@ -91,6 +145,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/1759645755326-sIGNAL_jAMMER.jpg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/image.svg",
+      "url": "/media/placeholders/image.svg",
+      "placeholder": {
+        "kind": "image",
+        "label": "Image Placeholder",
+        "path": "public/media/placeholders/image.svg",
+        "url": "/media/placeholders/image.svg"
       }
     },
     {
@@ -104,6 +167,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/uploads/1760531435763-black_magic_book_-_Copy.jpg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/upload.svg",
+      "url": "/media/placeholders/upload.svg",
+      "placeholder": {
+        "kind": "upload",
+        "label": "Upload Placeholder",
+        "path": "public/media/placeholders/upload.svg",
+        "url": "/media/placeholders/upload.svg"
       }
     },
     {
@@ -117,6 +189,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/uploads/1759945867484-panda_cute.jpg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/upload.svg",
+      "url": "/media/placeholders/upload.svg",
+      "placeholder": {
+        "kind": "upload",
+        "label": "Upload Placeholder",
+        "path": "public/media/placeholders/upload.svg",
+        "url": "/media/placeholders/upload.svg"
       }
     },
     {
@@ -130,6 +211,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/uploads/1759944234519-casper.jpg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/upload.svg",
+      "url": "/media/placeholders/upload.svg",
+      "placeholder": {
+        "kind": "upload",
+        "label": "Upload Placeholder",
+        "path": "public/media/placeholders/upload.svg",
+        "url": "/media/placeholders/upload.svg"
       }
     },
     {
@@ -143,6 +233,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/uploads/1759973022794-Diamond_complete2.jpg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/upload.svg",
+      "url": "/media/placeholders/upload.svg",
+      "placeholder": {
+        "kind": "upload",
+        "label": "Upload Placeholder",
+        "path": "public/media/placeholders/upload.svg",
+        "url": "/media/placeholders/upload.svg"
       }
     },
     {
@@ -156,6 +255,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/uploads/1759945844073-Diamond_complete2.jpg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/upload.svg",
+      "url": "/media/placeholders/upload.svg",
+      "placeholder": {
+        "kind": "upload",
+        "label": "Upload Placeholder",
+        "path": "public/media/placeholders/upload.svg",
+        "url": "/media/placeholders/upload.svg"
       }
     },
     {
@@ -169,6 +277,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/uploads/1760528512543-MAP.PNG"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/upload.svg",
+      "url": "/media/placeholders/upload.svg",
+      "placeholder": {
+        "kind": "upload",
+        "label": "Upload Placeholder",
+        "path": "public/media/placeholders/upload.svg",
+        "url": "/media/placeholders/upload.svg"
       }
     },
     {
@@ -182,6 +299,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/icons/1760231568080-erix_coach_and_car_fleet_QR.jpg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/icon.svg",
+      "url": "/media/placeholders/icon.svg",
+      "placeholder": {
+        "kind": "icon",
+        "label": "Icon Placeholder",
+        "path": "public/media/placeholders/icon.svg",
+        "url": "/media/placeholders/icon.svg"
       }
     },
     {
@@ -195,6 +321,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/icons/1760529588317-Map.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/icon.svg",
+      "url": "/media/placeholders/icon.svg",
+      "placeholder": {
+        "kind": "icon",
+        "label": "Icon Placeholder",
+        "path": "public/media/placeholders/icon.svg",
+        "url": "/media/placeholders/icon.svg"
       }
     },
     {
@@ -208,6 +343,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/icons/aurora-beacon.svg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/icon.svg",
+      "url": "/media/placeholders/icon.svg",
+      "placeholder": {
+        "kind": "icon",
+        "label": "Icon Placeholder",
+        "path": "public/media/placeholders/icon.svg",
+        "url": "/media/placeholders/icon.svg"
       }
     },
     {
@@ -221,6 +365,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/icons/chrono-switch.svg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/icon.svg",
+      "url": "/media/placeholders/icon.svg",
+      "placeholder": {
+        "kind": "icon",
+        "label": "Icon Placeholder",
+        "path": "public/media/placeholders/icon.svg",
+        "url": "/media/placeholders/icon.svg"
       }
     },
     {
@@ -234,6 +387,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/icons/lumen-halo.svg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/icon.svg",
+      "url": "/media/placeholders/icon.svg",
+      "placeholder": {
+        "kind": "icon",
+        "label": "Icon Placeholder",
+        "path": "public/media/placeholders/icon.svg",
+        "url": "/media/placeholders/icon.svg"
       }
     },
     {
@@ -247,6 +409,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/icons/quantum-anchor.svg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/icon.svg",
+      "url": "/media/placeholders/icon.svg",
+      "placeholder": {
+        "kind": "icon",
+        "label": "Icon Placeholder",
+        "path": "public/media/placeholders/icon.svg",
+        "url": "/media/placeholders/icon.svg"
       }
     },
     {
@@ -260,6 +431,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/icons/voyager-dial.svg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/icon.svg",
+      "url": "/media/placeholders/icon.svg",
+      "placeholder": {
+        "kind": "icon",
+        "label": "Icon Placeholder",
+        "path": "public/media/placeholders/icon.svg",
+        "url": "/media/placeholders/icon.svg"
       }
     },
     {
@@ -273,6 +453,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/covers/chronorift-cove.svg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/cover.svg",
+      "url": "/media/placeholders/cover.svg",
+      "placeholder": {
+        "kind": "cover",
+        "label": "Cover Placeholder",
+        "path": "public/media/placeholders/cover.svg",
+        "url": "/media/placeholders/cover.svg"
       }
     },
     {
@@ -286,6 +475,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/covers/neon-lantern-heist.svg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/cover.svg",
+      "url": "/media/placeholders/cover.svg",
+      "placeholder": {
+        "kind": "cover",
+        "label": "Cover Placeholder",
+        "path": "public/media/placeholders/cover.svg",
+        "url": "/media/placeholders/cover.svg"
       }
     },
     {
@@ -299,6 +497,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/covers/starfield-station-break.svg"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/cover.svg",
+      "url": "/media/placeholders/cover.svg",
+      "placeholder": {
+        "kind": "cover",
+        "label": "Cover Placeholder",
+        "path": "public/media/placeholders/cover.svg",
+        "url": "/media/placeholders/cover.svg"
       }
     },
     {
@@ -312,6 +519,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/bundles/CLUEgreen.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/bundle.svg",
+      "url": "/media/placeholders/bundle.svg",
+      "placeholder": {
+        "kind": "bundle",
+        "label": "Bundle Placeholder",
+        "path": "public/media/placeholders/bundle.svg",
+        "url": "/media/placeholders/bundle.svg"
       }
     },
     {
@@ -325,6 +541,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/bundles/GOLDEN COIN.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/bundle.svg",
+      "url": "/media/placeholders/bundle.svg",
+      "placeholder": {
+        "kind": "bundle",
+        "label": "Bundle Placeholder",
+        "path": "public/media/placeholders/bundle.svg",
+        "url": "/media/placeholders/bundle.svg"
       }
     },
     {
@@ -338,6 +563,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/bundles/ROBOT1small.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/bundle.svg",
+      "url": "/media/placeholders/bundle.svg",
+      "placeholder": {
+        "kind": "bundle",
+        "label": "Bundle Placeholder",
+        "path": "public/media/placeholders/bundle.svg",
+        "url": "/media/placeholders/bundle.svg"
       }
     },
     {
@@ -351,6 +585,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/bundles/SMOKE BOMB.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/bundle.svg",
+      "url": "/media/placeholders/bundle.svg",
+      "placeholder": {
+        "kind": "bundle",
+        "label": "Bundle Placeholder",
+        "path": "public/media/placeholders/bundle.svg",
+        "url": "/media/placeholders/bundle.svg"
       }
     },
     {
@@ -364,6 +607,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/bundles/evidence 2.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/bundle.svg",
+      "url": "/media/placeholders/bundle.svg",
+      "placeholder": {
+        "kind": "bundle",
+        "label": "Bundle Placeholder",
+        "path": "public/media/placeholders/bundle.svg",
+        "url": "/media/placeholders/bundle.svg"
       }
     },
     {
@@ -377,6 +629,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/bundles/trivia icon.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/bundle.svg",
+      "url": "/media/placeholders/bundle.svg",
+      "placeholder": {
+        "kind": "bundle",
+        "label": "Bundle Placeholder",
+        "path": "public/media/placeholders/bundle.svg",
+        "url": "/media/placeholders/bundle.svg"
       }
     },
     {
@@ -390,6 +651,15 @@
       "supabase": {
         "bucket": "admin-media",
         "path": "mediapool/Images/bundles/trivia yellow.png"
+      },
+      "path": "",
+      "thumbUrl": "/media/placeholders/bundle.svg",
+      "url": "/media/placeholders/bundle.svg",
+      "placeholder": {
+        "kind": "bundle",
+        "label": "Bundle Placeholder",
+        "path": "public/media/placeholders/bundle.svg",
+        "url": "/media/placeholders/bundle.svg"
       }
     }
   ]
