--- a/apps/game-web/package.json
+++ b/apps/game-web/package.json
@@ -11,6 +11,9 @@
     "next": "15.5.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "2.2.5"
+    "swr": "2.2.5",
+    "@supabase/supabase-js": "2.49.1",
+    "leaflet": "1.9.4",
+    "react-leaflet": "4.3.2"
   }
 }
