Pin pnpm environment and surface install guidance

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "esxape-ride",
   "private": true,
-  "packageManager": "pnpm@9.12.1",
+  "engines": {
+    "node": "20.18.x"
+  },
+  "packageManager": "pnpm@9.12.0",
   "workspaces": ["apps/*", "packages/*"],
   "scripts": {
     "dev": "turbo run dev",
