--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "packageManager": "pnpm@9.12.0",
   "workspaces": ["apps/*", "packages/*"],
   "scripts": {
+    "preinstall": "node scripts/check-toolchain.mjs",
     "dev": "turbo run dev",
     "build": "turbo run build",
     "start": "turbo run start",
