--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "esx-admin-control-panel-map",
   "version": "1.2.1",
   "private": true,
+  "packageManager": "pnpm@8.15.5",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
