--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,8 +10,10 @@
     "verify:binaries": "node scripts/list-binary-files.mjs --fail"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.10",
     "next": "^15.5.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "ulid": "^2.3.0"
   }
 }
