Surface local git metadata and runtime details

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "esxape-ride",
   "private": true,
+  "volta": {
+    "node": "20.18.1",
+    "pnpm": "9.11.0"
+  },
   "engines": {
     "node": ">=20.18 <21"
   },
@@ -8,7 +12,7 @@
   "workspaces": ["apps/*", "packages/*"],
   "scripts": {
     "dev": "turbo run dev",
-    "vercel:info": "node -v && (corepack --version || true) && (pnpm -v || true)",
+    "vercel:info": "node tools/vercel-info.mjs",
     "build": "turbo run build",
     "start": "turbo run start",
     "build:game": "node tools/offline-pnpm.mjs --filter game-web build"
