--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "esxape-ride",
   "private": true,
+  "volta": {
+    "node": "20.18.1",
+    "pnpm": "4.0.0"
+  },
   "engines": {
     "node": ">=20.18 <21"
   },
-  "packageManager": "pnpm@9.11.0",
+  "packageManager": "pnpm@4.0.0",
   "workspaces": ["apps/*", "packages/*"],
   "scripts": {
     "dev": "turbo run dev",
