--- a/apps/game-web/package.json
+++ b/apps/game-web/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": ">=20.18 <21"
   },
-  "packageManager": "pnpm@9.11.0",
+  "packageManager": "pnpm@latest",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
