Align toolchain to Node 19

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,3 +3,4 @@ SUPABASE_ANON_KEY=your_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
 SUPABASE_MEDIA_BUCKET=media
 SUPABASE_IMPORTS_BUCKET=imports
+ENABLE_EXPERIMENTAL_COREPACK=1
