--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -2,6 +2,9 @@
   "name": "esx-admin-control-panel-map",
   "version": "1.2.1",
   "private": true,
+  "engines": {
+    "node": ">=19 <20"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
