--- a/apps/game-web/package.json
+++ b/apps/game-web/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "version": "0.1.0",
   "engines": {
-    "node": ">=20.18 <21"
+    "node": "20.18.1"
   },
-  "packageManager": "pnpm@latest",
+  "packageManager": "pnpm@9.11.0",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
