--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "packageManager": "pnpm@9.11.0",
   "engines": {
-    "node": ">=20.18 <21"
+    "node": "20.18.1"
   },
   "volta": {
     "node": "20.18.1",
