--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "packageManager": "pnpm@9.11.0",
   "engines": {
-    "node": ">=20.18 <21"
+    "node": "22.x"
   },
   "volta": {
-    "node": "20.18.1",
+    "node": "22.11.0",
     "pnpm": "9.11.0"
   },
   "scripts": {
