--- a/apps/admin/public/game/package.json
+++ b/apps/admin/public/game/package.json
@@ -2,6 +2,10 @@
   "name": "esx-game",
   "private": true,
   "version": "0.1.0",
+  "engines": {
+    "node": "22.x"
+  },
+  "packageManager": "pnpm@9.11.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
