--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,6 +2,10 @@
   "name": "@esx/shared",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "22.x"
+  },
+  "packageManager": "pnpm@9.11.0",
   "main": "index.js",
   "types": "index.d.ts"
 }
