--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "packageManager": "pnpm@9.0.0",
   "engines": {
-    "node": ">=19 <20"
+    "node": ">=20"
   },
   "volta": {
     "node": "19.9.0",
