--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "pnpm build",
-  "installCommand": "pnpm install --frozen-lockfile"
+  "buildCommand": "pnpm --filter game-web... build",
+  "installCommand": "pnpm install --filter game-web... --frozen-lockfile"
 }
