--- a/apps/game-web/package.json
+++ b/apps/game-web/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "engines": {
-    "node": "22.x"
+    "node": "22"
   },
   "packageManager": "pnpm@9",
   "scripts": {
