--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": ">19 20<"
   },
   "volta": {
-    "node": "22.11.0",
+    "node": ">=19 <20",
     "pnpm": "9.11.0"
   },
   "scripts": {
