Update packageManager to use default pnpm version

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "admin-esxape-ride",
   "private": true,
-  "packageManager": "pnpm@9.11.0",
+  "packageManager": "pnpm",
   "engines": {
     "node": ">19 20<"
   },
