--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "pnpm --filter game-web... build",
-  "installCommand": "pnpm install --filter game-web... --frozen-lockfile"
+  "installCommand": "yarn install --immutable",
+  "buildCommand": "yarn workspace game-web run build"
 }
