Align Node 22 runtime and sequential Yarn builds (#233)

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
   "installCommand": "yarn install --immutable",
-  "buildCommand": "yarn workspace game-web run build"
+  "buildCommand": "yarn build"
 }
