--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "scripts": {
     "vercel:info": "node tools/vercel-info.mjs",
     "dev": "turbo run dev --parallel",
-    "build": "turbo run build --filter=game-web --filter=esx-admin-control-panel-map",
+    "build": "yarn workspace esx-admin-control-panel-map run build && yarn workspace game-web run build",
     "build:admin": "yarn workspace esx-admin-control-panel-map run build",
+    "build:game": "yarn workspace game-web run build",
     "build:turbo": "turbo run build"
   },
   "devDependencies": {
