--- a/apps/game-web/package.json
+++ b/apps/game-web/package.json
@@ -12,6 +12,7 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.0",
     "next": "15.5.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
