--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,6 +2,5 @@
   "name": "@esx/shared",
   "version": "0.0.0",
   "private": true,
-  "main": "index.js",
-  "types": "index.d.ts"
+  "main": "index.js"
 }
