build: prep Yarn zero-installs config (.yarnrc.yml, .gitignore)

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ game/node_modules/
 .env.local
 .vercel
 .DS_Store
+.yarn/*
+!.yarn/releases
+!.yarn/cache
+!.yarn/plugins
+!.yarn/patches
+
+node_modules/
