--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "installCommand": "yarn install --immutable",
-  "buildCommand": "yarn build"
+  "installCommand": "cd apps/admin && npm install",
+  "buildCommand": "cd apps/admin && npm run build"
 }
