chore(game-web): drop vendored yarn and refresh supabase tooling

--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "scripts": {
     "vercel:info": "node tools/vercel-info.mjs",
     "dev": "turbo run dev --parallel",
+    "dev:game": "turbo run dev --filter=game-web",
     "build": "yarn workspace esx-admin-control-panel-map run build && yarn workspace game-web run build",
     "build:admin": "yarn workspace esx-admin-control-panel-map run build",
-    "build:game": "yarn workspace game-web run build",
+    "build:game": "turbo run build --filter=game-web",
     "build:turbo": "turbo run build"
   },
   "devDependencies": {
