--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,6 +2,6 @@ compressionLevel: mixed
 
 enableGlobalCache: false
 
-enableTelemetry: false
-
 nodeLinker: node-modules
+
+npmRegistryServer: "https://registry.npmjs.org"
