--- a/apps/game-web/package.json
+++ b/apps/game-web/package.json
@@ -7,14 +7,13 @@
   },
   "packageManager": "yarn@4.9.4",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start -p 3000"
   },
   "dependencies": {
     "next": "15.5.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "swr": "2.2.5"
+    "react-dom": "18.2.0"
   }
 }
