--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,9 +1,3 @@
-compressionLevel: mixed
-
-enableGlobalCache: false
-
-enableTelemetry: false
-
 nodeLinker: node-modules
-
-yarnPath: .yarn/releases/yarn-4.9.4.cjs
+enableGlobalCache: false
+npmRegistryServer: "https://registry.npmjs.org"
