--- a/apps/game-web/package.json
+++ b/apps/game-web/package.json
@@ -11,6 +11,11 @@
     "build": "next build",
     "start": "next start -p 3000"
   },
+  "devDependencies": {
+    "@types/node": "^20.14.12",
+    "@types/react": "^18.3.5",
+    "typescript": "^5.6.3"
+  },
   "dependencies": {
     "next": "15.5.5",
     "react": "18.2.0",
