--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,7 @@
-nodeLinker: node-modules
+compressionLevel: mixed
+
 enableGlobalCache: false
+
+nodeLinker: node-modules
+
 npmRegistryServer: "https://registry.npmjs.org"
